--- a/css/styles.css
+++ b/css/styles.css
@@ -8,23 +8,75 @@
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
   --accent-color: #2196f3;
+  --primary-white-color: #ffffff;
+  --first-bg-color: #2f303a;
+  --secondary-bg-color: #f5f4fa;
 }
 
 body {
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
   color: var(--secondary-text-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: left;
+  vertical-align: top;
 }
 
-ul {
+/* Hero */
+.hero {
+  background-color: var(--first-bg-color);
+}
+.hero-title {
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  text-align: center;
+  vertical-align: top;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.hero-btn {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+  /* Выровнять еще по центру нужно */
+}
+
+.list {
   list-style: none;
 }
 
+.link {
+  text-decoration: none;
+  color: var(--secondary-text-color);
+}
+.mail-link,
+.tel-link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.mail-link:hover,
+.mail-link:focus,
+.tel-link:hover,
+.tel-link:focus {
+  color: var(--accent-color);
+}
+
+/* Logo */
 .logo {
   color: #000000;
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   text-decoration: none;
+  line-height: 1.2;
 }
 .logo.span {
   color: var(--accent-color);
@@ -33,6 +85,10 @@ ul {
 /* Site nav */
 .site-nav .link {
   color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -40,23 +96,111 @@ ul {
   color: var(--accent-color);
 }
 
+.site-nav .link.current {
+  color: var(--accent-color);
+}
+
 /* Features */
-.feature-list .title {
+.feature-list .feature-title {
   color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: left;
 }
 
 /* Examples */
-.section-title {
+.about-title {
   color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
+/* Team */
+.team-title-people {
+  text-align: center;
 }
 .team {
   color: var(--primary-text-color);
+  background-color: var(--secondary-bg-color);
+}
+.team-text {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
+.team-title {
+  text-align: center;
+}
+
+.team-title-people {
+}
+
+/* Button */
+.button {
+  color: var(--primary-text-color);
+  background-color: #f5f4fa;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  vertical-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+
+.list-button {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+
+/* Adress */
+.footer {
+  background-color: var(--first-bg-color);
+  color: var(--primary-white-color);
+}
+
+.logo-footer {
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  text-decoration: none;
+  line-height: 1.2;
+}
+
+.span-footer {
+}
 address {
   color: #ffffff;
+  background-color: var(--first-bg-color);
+  font-style: normal;
 }
 .adress a {
   color: white;
   text-decoration: none;
+}
+
+/* Portfolio */
+.potfolio-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--secondary-text-color);
 }
